# chassis-example

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
src/example/: config.py  models.py  providers.py  repository.py  routes.py  schemas.py  services.py
tests/: test_books.py
